--- a/style.css
+++ b/style.css
@@ -9,7 +9,41 @@ h1, h2 {
   font-family: 'Oswald', sans-serif;
 }
 
+#navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#navbar li {
+  display: inline;
+}
+
+#navbar a {
+  margin-left: 75px;
+  margin-right: 75px;
+}
+
 img {
   float: left;
   margin-right: 5px;
 }
+
+.left {
+  float: left;
+  width: 300px;
+  padding: 1em;
+}
+
+.right {
+  float: right;
+  width: 300px;
+  padding: 1em;
+}
+
+.center {
+  margin-left: 300px;
+  margin-right: 300px;
+  padding: 1em;
+}
+
